Нерф хевиша и хаяра

--- a/Resources/Prototypes/_Lua/Shipyard/SD/hayar.yml
+++ b/Resources/Prototypes/_Lua/Shipyard/SD/hayar.yml
@@ -6,15 +6,18 @@
   parent: BaseVessel
   id: Hayar
   name: Хаяр
-  description: Эсминец Lua Technologies, имеет на борту щиты, большое количество турелей, рекомендуемый экипаж 4 человека, служит для сопровожения Линкора Хевишь.
-  price: 264901
+  description: Эсминец Lua Technologies, упрощенная версия корабля LuaTech, оснащенная только самым необходимым, рекомендуемый экипаж 4 человека, служит для сопровожения Линкора Хевишь.
+  price: 144901
   category: Medium
   group: Security
   access: Sergeant
   shuttlePath: /Maps/_Lua/Shuttles/SD/hayar.yml
   guidebookPage: Null
+  noVoucher: true
   class:
   - Fighter
+  engine:
+  - Uranium
   addComponents:
     - type: IFF
       color: "#009954"
