--- a/Resources/Prototypes/_Lua/Shipyard/SD/hevish.yml
+++ b/Resources/Prototypes/_Lua/Shipyard/SD/hevish.yml
@@ -6,13 +6,14 @@
   parent: BaseVessel
   id: Hevish
   name: Хевиш
-  description: Линкор Lua Technologies, имеет на борту щиты, ИИ, турели и большое количество артиллерийских установок, рекомендуемый экипаж 10 человек, требует сопровождения Эсминцем Хаяр.
-  price: 1483092
+  description: Линкор Lua Technologies, упрощенная версия корабля LuaTech, оснащенная только самым необходимым, рекомендуемый экипаж 10 человек, требует сопровождения Эсминцем Хаяр.
+  price: 583092
   category: Medium
   group: Security
   access: Sergeant
   shuttlePath: /Maps/_Lua/Shuttles/SD/hevish.yml
   guidebookPage: Null
+  noVoucher: true
   class:
   - Fighter
   engine:
