--- a/Resources/Prototypes/_Lua/Entities/Structures/shields.yml
+++ b/Resources/Prototypes/_Lua/Entities/Structures/shields.yml
@@ -2,7 +2,7 @@
   id: CircularShieldLua
   name: PLT генератор щита
   parent: [BaseStructureDisableToolUse, CircularShieldBase, BaseStructure]
-  suffix: Lua, Theta, CircularShield
+  suffix: Lua, Theta, CircularShield, Тир 5
   components:
     - type: Machine
       board: MachineShieldPLTCircuitboard
@@ -31,3 +31,22 @@
       color: "#a200ff"
       radius: 2.0
       energy: 1.5
+
+- type: entity
+  id: CircularShieldLuaBuild
+  name: PLT генератор щита
+  parent: [CircularShieldLua, BaseStructureDisableToolUse, CircularShieldBase, BaseStructure]
+  suffix: Lua, Theta, CircularShield, Тир 1
+  components:
+    - type: Machine
+      board: MachineShieldPLTCircuitboardBuild
+    - type: CircularShield
+      consumptionPerM2: 0.35
+      maxWidth: 360
+      maxRadius: 100
+      color: "#a200ff"
+      effects:
+        - !type:CircularShieldTempSpeedChangeEffect
+          speedModifier: 0.1
+      projectileWattPerImpact: 15
+      damageSurgeDuration: 15
