--- a/Resources/Prototypes/_Lua/Roles/Jobs/Typan/researcher.yml
+++ b/Resources/Prototypes/_Lua/Roles/Jobs/Typan/researcher.yml
@@ -3,7 +3,7 @@
 # See AGPLv3.txt for details.
 
 - type: job
-  id: OutpostTypanResearcher
+  id: OutpostSyndicateResearcher
   name: job-name-typan-researcher
   playTimeTracker: JobOutpostTypanResearcher
   salary: 25000
@@ -43,8 +43,6 @@
   accessGroups:
   - AllAccess
   special:
-  - !type:AddImplantSpecial
-    implants: [ DeathAcidifierImplantLWTypan ]
   - !type:AddComponentSpecial
     components:
       - type: Company
@@ -56,10 +54,10 @@
 - type: startingGear
   id: SyndicateResearcher
   equipment:
-    ears: ClothingHeadsetAltOutpostTypan
+    ears: ClothingHeadsetAltOutpostSyndicate
     jumpsuit: ClothingUniformJumpsuitRecruitSyndie
-    shoes: ClothingShoesBootsOutpostTypan
+    shoes: ClothingShoesBootsOutpostSyndicate
     back: ClothingBackpackSyndicateFilled
-    belt: ClothingBeltAssaultOutpostTypan
+    belt: ClothingBeltAssaultOutpostSyndicate
 
     id: SyndiPDAResearcher
