Ремонт шаттла тиния

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard_mothership.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard_mothership.yml
@@ -52,10 +52,11 @@
   id: McCargoMothershipComputer
   parent: BaseMothershipComputer
   name: mccargo shipyard console
-  # components:
-  # - type: ShipyardListing
-  #   shuttles:
-  #   - McDelivery
+  components:
+  - type: ShipyardListing
+    shuttles:
+    # - McDelivery
+    - Rhea
 
 # The caladrius console
 - type: entity
