Качество жизни #1 Залезть на ген
Перелазить через генераторы к гребаным шкафчиком стало реальным!

--- a/Resources/Prototypes/_NF/Entities/Structures/Power/Generation/portable_generator.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Power/Generation/portable_generator.yml
@@ -3,6 +3,7 @@
   id: BaseGeneratorShuttle
   abstract: true
   components:
+  - type: Climbable
   - type: Transform
     anchored: true
   - type: Physics
