--- a/Resources/Prototypes/Entities/Structures/Power/Generation/portable_generator.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/portable_generator.yml
@@ -21,6 +21,7 @@
       sound:
         path: /Audio/Ambience/Objects/engine_hum.ogg
       enabled: false
+    - type: Climbable
     - type: Fixtures
       fixtures:
         fix1:
