fix(proto): Поправлены статый темно-зеленого пальто, поправлены проблемы с патронами у хС-67, АН-94 и АЕК

--- a/Resources/Prototypes/_ADT/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle_ext.yml
+++ b/Resources/Prototypes/_ADT/Entities/Objects/Weapons/Guns/Ammunition/Magazines/rifle_ext.yml
@@ -14,7 +14,7 @@
     mayTransfer: true
     whitelist:
       tags:
-        - CartridgeRifle
+        - NFCartridgeRifle20
     capacity: 45
   - type: ContainerContainer
     containers:
