--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/explosives.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/explosives.yml
@@ -35,7 +35,7 @@
     deleteOnSpawn: true
     proto: NFBulletWeakRocket
   - type: Sprite
-    state: frag
+    state: rpg
 
 - type: entity
   parent: NFBaseCartridgeRocket
