--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -593,9 +593,15 @@
     sprite: Clothing/Belt/holster.rsi
   - type: Clothing
     sprite: Clothing/Belt/holster.rsi
-  # - type: Storage # Frontier: commented out
-    # grid: # Frontier: commented out
-    # - 0,0,3,1 # Frontier: commented out
+  - type: Storage # Frontier: commented out
+    maxItemSize: Huge # Frontier: commented out
+    grid: # Frontier: commented out
+    - 0,0,3,3 # Frontier: commented out
+    whitelist: # Frontier: commented out whitelist
+     components:
+     - Gun
+     - BallisticAmmoProvider
+     - CartridgeAmmo
 
 - type: entity
   parent: [NFClothingBeltStorageBase, BaseC3SyndicateContraband, ContrabandClothing] # Frontier: ClothingBeltStorageBase<NFClothingBeltStorageBase, BaseSyndicateContraband<BaseC3SyndicateContraband, added ContrabandClothing as parent
@@ -607,17 +613,17 @@
     sprite: Clothing/Belt/syndieholster.rsi
   - type: Clothing
     sprite: Clothing/Belt/syndieholster.rsi
-  #- type: Item # Frontier
-    #size: Ginormous # Frontier
-  # - type: Storage # Frontier: commented out
-    # maxItemSize: Huge # Frontier: commented out
-    # grid: # Frontier: commented out
-    # - 0,0,3,3 # Frontier: commented out
-    # whitelist: # Frontier: commented out whitelist
-      # components:
-        # - Gun
-        # - BallisticAmmoProvider
-        # - CartridgeAmmo
+  - type: Item # Frontier
+    size: Ginormous # Frontier
+  - type: Storage # Frontier: commented out
+    maxItemSize: Huge # Frontier: commented out
+    grid: # Frontier: commented out
+    - 0,0,4,3 # Frontier: commented out
+    whitelist: # Frontier: commented out whitelist
+     components:
+     - Gun
+     - BallisticAmmoProvider
+     - CartridgeAmmo
 
 - type: entity
   parent: NFClothingBeltStorageBase # Frontier: ClothingBeltStorageBase<NFClothingBeltStorageBase
