Нёрф Посоха Исцеления
Не вырезать же, 180 секунд перезарядки - подходит, повезёт если найдут - излечит любой труп или в самой сложной ситуации! Остается только откат гниения...

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/staves.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/staves.yml
@@ -16,8 +16,10 @@
       path: /Audio/Weapons/Guns/Gunshots/Magic/staff_healing.ogg
   - type: BasicEntityAmmoProvider
     proto: ProjectileHealingBolt
-    capacity: 10
-    count: 10
+    capacity: 6
+    count: 6
+  - type: RechargeBasicEntityAmmo
+    rechargeCooldown: 180
 
 - type: entity
   name: staff of entrance
