--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -495,6 +495,9 @@
                   max: 1
             - !type:DoActsBehavior
               acts: [ "Destruction" ]
+    - type: Construction # Frontier - Harder to break into
+      graph: Plastitanium # Frontier - Harder to break into
+      node: WallPlastitanium # Lua - Harder to break into
 
 - type: entity
   parent: WallShuttleDiagonal
@@ -541,6 +544,9 @@
         acts: ["Destruction"]
   - type: RCDDeconstructable # Frontier
     deconstructable: false # Frontier
+  - type: Construction # Frontier - Harder to break into
+    graph: Plastitanium # Frontier - Harder to break into
+    node: WallPlastitanium # Lua - Harder to break into
 
 - type: entity
   id: WallPlastitaniumDiagonalIndestructible
